<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Barrel Race</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="barrel_color_array">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="horse_color_array">
        <item>Gray</item>
        <item>Black</item>
    </string-array>
    <string-array name="bg_color_array">
        <item>white</item>
        <item>light gray</item>
    </string-array>
    <string-array name="barrel_size_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>

    <string name="highscore">HIGHSCORE</string>
    <string name="settings">Settings</string>
    <string name="start">START</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="retry">RETRY</string>
    <string name="home">HOME</string>
    <string name="result">Result</string>
    <string name="your_score_is_">Your Score is:</string>
    <string name="highscore_">HIGHSCORE :</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="score">SCORE</string>
    <string name="barrel_color_">Barrel Color:</string>
    <string name="horse_color_">Horse Color:</string>
    <string name="court_background_">Court Background:</string>
    <string name="barrel_size">Barrel Size</string>
    <string name="save">SAVE</string>

</resources>