<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF360C"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/_00_00_00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/highString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/highscore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/highTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highString"
        android:layout_centerHorizontal="true"
        android:text="@string/highscore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <Button
        android:id="@+id/mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="60dp"
        android:layout_toLeftOf="@+id/replay"
        android:background="@android:color/transparent"
        android:text="@string/home"
        android:textSize="30sp" />

    <Button
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mainmenu"
        android:layout_alignBottom="@+id/mainmenu"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:background="@android:color/transparent"
        android:text="@string/retry"
        android:textSize="30sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_toRightOf="@+id/name"
        android:background="@android:color/transparent"
        android:text="@string/save" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainmenu"
        android:layout_alignRight="@+id/result"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>